@@ -1,6 +1,6 @@
        0  0.0000E+00  0.0000E+00  0.0000E+00    0.0000E+00  0.0000E+00  0.0000E+00    1.1787E-01  2.3202E+00  8.6708E-02    2.52482E+00
-       1  2.0000E-02  3.0412E-11  5.0000E+01    2.8506E-11  7.9068E-13  1.1145E-12    1.1787E-01  2.3202E+00  8.6723E-02    2.52483E+00
-       2  4.0000E-02  4.3543E-11  8.8781E+00    3.9935E-11  1.2020E-12  2.4062E-12    1.1787E-01  2.3202E+00  8.6716E-02    2.52483E+00
-       3  6.0000E-02  4.4640E-11  6.2220E-01    4.0781E-11  1.4651E-12  2.3945E-12    1.1787E-01  2.3202E+00  8.6709E-02    2.52482E+00
-       4  8.0000E-02  4.3207E-11 -8.1590E-01    3.9361E-11  1.6245E-12  2.2218E-12    1.1787E-01  2.3202E+00  8.6702E-02    2.52482E+00
-       5  1.0000E-01  4.1810E-11 -8.2172E-01    3.7812E-11  1.7190E-12  2.2790E-12    1.1787E-01  2.3202E+00  8.6694E-02    2.52481E+00
+       1  2.0000E-02  3.0412E-11  5.0000E+01    2.8506E-11  7.9068E-13  1.1145E-12    1.1787E-01  2.3202E+00  8.6701E-02    2.52481E+00
+       2  4.0000E-02  4.3544E-11  8.8785E+00    4.0008E-11  1.2015E-12  2.3347E-12    1.1787E-01  2.3202E+00  8.6694E-02    2.52481E+00
+       3  6.0000E-02  4.5027E-11  8.3743E-01    4.1182E-11  1.4649E-12  2.3805E-12    1.1787E-01  2.3202E+00  8.6686E-02    2.52480E+00
+       4  8.0000E-02  4.4452E-11 -3.2162E-01    4.0473E-11  1.6249E-12  2.3534E-12    1.1787E-01  2.3202E+00  8.6679E-02    2.52479E+00
+       5  1.0000E-01  4.4369E-11 -4.6693E-02    4.0045E-11  1.7203E-12  2.6033E-12    1.1787E-01  2.3202E+00  8.6670E-02    2.52479E+00
