@@ -1,4 +1,4 @@
        0  0.0000E+00  0.0000E+00  0.0000E+00    0.0000E+00  0.0000E+00  0.0000E+00    1.1786E-01  2.3202E+00  8.6703E-02    2.52481E+00
-       1  1.0000E+00  1.3261E-11  1.0000E+00    1.1981E-11  8.1454E-13  4.6576E-13    1.1786E-01  2.3202E+00  8.6707E-02    2.52479E+00
-       2  2.0000E+00  2.4207E-09  9.8910E-01    4.0185E-10  1.8637E-09  1.5515E-10    1.1786E-01  2.3202E+00  8.6721E-02    2.52482E+00
-       3  3.0000E+00  5.2708E-07  9.9086E-01    1.5644E-07  3.5039E-07  2.0249E-08    1.1786E-01  2.3202E+00  8.6719E-02    2.52482E+00
+       1  1.0000E+00  1.3285E-11  1.0000E+00    1.2003E-11  8.1646E-13  4.6593E-13    1.1786E-01  2.3202E+00  8.6708E-02    2.52480E+00
+       2  2.0000E+00  2.2349E-07  9.9988E-01    3.0547E-08  1.7689E-07  1.6055E-08    1.1786E-01  2.3202E+00  8.6739E-02    2.52484E+00
+       3  3.0000E+00  5.1841E-06  9.1734E-01    1.5483E-06  3.4146E-06  2.2121E-07    1.1785E-01  2.3202E+00  8.6682E-02    2.52479E+00
