@@ -1118,9 +1118,9 @@ subroutine define_transport_coefficients()
   logical :: solve_sigma, solve_kappa, solve_visc, solve_resistivity, &
        solve_visc_e, solve_q, solve_totrad, solve_linerad, solve_bremrad, &
        solve_ionrad, solve_reckrad, solve_recprad, solve_cd, solve_f, &
-       solve_fp, solve_be, solve_al, solve_bs
+       solve_fp
 
-  integer, parameter :: num_scalars = 18
+  integer, parameter :: num_scalars = 15
   integer, dimension(num_scalars) :: temp, temp2
   vectype, dimension(dofs_per_element) :: dofs
 
@@ -1147,9 +1147,6 @@ subroutine define_transport_coefficients()
   solve_recprad = .false.
   solve_cd = .false.
   solve_fp = .false.
-  solve_be = .false.
-  solve_al = .false.
-  solve_bs = .false.
 
   ! clear variables
   resistivity_field = 0.
@@ -1312,7 +1309,6 @@ subroutine define_transport_coefficients()
         if(solve_recprad) &
              call vector_insert_block(Recprad_field%vec,itri,1,dofs,VEC_ADD)
 !$OMP END CRITICAL
-        
      end if
 
      if(icd_source .gt. 0) then
@@ -1356,9 +1352,6 @@ subroutine define_transport_coefficients()
      if(solve_ionrad)      temp(13) = 1
      if(solve_reckrad)     temp(14) = 1
      if(solve_recprad)     temp(15) = 1
-     if(solve_be)          temp(16) = 1
-     if(solve_al)          temp(17) = 1
-     if(solve_bs)          temp(18) = 1
 
      call mpi_allreduce(temp, temp2, num_scalars, MPI_INTEGER, &
           MPI_MAX, MPI_COMM_WORLD, ier)
@@ -1378,9 +1371,6 @@ subroutine define_transport_coefficients()
      solve_ionrad      = temp2(13).eq.1
      solve_reckrad     = temp2(14).eq.1
      solve_recprad     = temp2(15).eq.1
-     solve_be          = temp2(16).eq.1
-     solve_al          = temp2(17).eq.1
-     solve_bs          = temp2(18).eq.1
   end if
 
   if(myrank.eq.0 .and. iprint.ge.1) print *, ' solving...'
